2017-06-07  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-706

	* src/oem.h: Another fix for the isnan problem.

2017-06-07 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-705

	* src/cloudbox.[cc,h] (psdFromMH97):
	Revised and renamed old IWCtopnd_MH97. Now takes a Vector of sizes.
	More rigid behaviour for out-of-bounds input parameters, pushing all
	responsibility to handle/fix them to calling function.

	* src/m_cloudbox.cc (dNdD_MH97):
	Adapted to apply new psdFromMH97 conserving old behaviour.

	* src/m_cloudradar.cc:
	Adapted to apply new psdFromMH97.

	* src/methods.cc: Cosmetical fixes.

2017-06-07  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-703

	* src/m_oem.cc: Added guards to keep isnan macro out of invlib code.

	* src/matpack.h: Rolled back using declarations, which cause build error
	on different configuration.

2017-06-07  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-702

	* src/oem.h(ArtsLog): Some cosmetical fixes for the logging class.

	* src/m_oem.cc (oem_template): Implemented some changes discussed
	with Patrick. Also fixed the length of the ml_ga_history_vector.

	* 3rdparty/invlib/*: Updated invlib library

	* src/matpack.h: Replaced Macros by using directives. Same effect, but doesn't
	break other code that uses the std:: prefix for the isnan and isinf functions.

2017-06-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-701

	* src/m_oem.cc (x2artsScatSpecies): New WSM.

	* src/m_cloudradar.cc (pnd_fieldCalcFromParticleBulkProps): Did
	not work with no jacobian calculations.

2017-06-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-700

	* 3rdparty/polradtran/rt4/radmat.f:

	Rename daxpy and dswap to rt4_* to avoid name clash with function from
	external BLAS library. Avoids possible segfaults due to implementation
	differences. Reported by Patrick and Simon.

2017-06-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-699
